Finish first major set of revisions

--- a/appa.tex
+++ b/appa.tex
@@ -247,7 +247,7 @@ And the values of $\partial{T}$ are:
 \end{equation}
 \section{Volume Averaged Powers}
 
-The first thing to consider in a fusion reactor is power balance. \\ It is what separates a profitable device from a toaster. It's given by:
+The first thing to consider in a fusion reactor is power balance. \replaced{It is what separates a net power producing reactor from a power-consuming research device.}{ \\ It is what separates a profitable device from a toaster. It's given by:}
 
 \label{pwr_bal}
 \begin{equation}
