--- a/bootstrap.tex
+++ b/bootstrap.tex
@@ -36,7 +36,7 @@ In this expression $b_p$ is a normalized form of the poloidal magnetic field der
 The normalized internal inductance $l_i$ and radial location of the current peak $\rho_m$ are related to the value of $\gamma$ by:
 
 \begin{equation}
-	\frac{ 4 \kappa }{ 1 + \kappa^2 } \int_0^1 b_p^2 \frac{ d\rho}{\rho}
+	l_i = \frac{ 4 \kappa }{ 1 + \kappa^2 } \int_0^1 b_p^2 \, \rho \, d\rho
 \end{equation}
 \begin{equation}
 	\rho_m = 
