--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,8 +11,9 @@
 
 \begin{itemize}
 	\item \added{building stronger magnets using HTS tape}
-	\item \added{producing higher bootstrap fractions with tailored profiles}
 	\item \added{discovering reliable regimes of enhanced confinement}
+	\item \added{producing higher bootstrap fractions with tailored profiles}
+	\item \added{optimizing aspect ratio and elongation geometric parameters}
 \end{itemize}
 
 \added{As mentioned, using HTS tape to nearly double achievable magnet strengths is one such advancement capable of making reactors economically viable. To best utilize this resource, though, HTS tape should only appear in the TF coils for steady-state machines and in the central solenoid for pulsed ones. This was because the optimum toroidal field strength for pulsed machines was found to be achievable with conventional low-temperature superconducting (LTS) magnets.}
