--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,52 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@article{iter_cs,
+abstract = {The central solenoid (CS) of the ITER tokamak contributes to the inductive flux to drive the plasma, to the shaping of the field lines in the divertor region and to vertical stability control. It is made of 6 independent coils, using a Nb3Sn cable-in-conduit superconducting conductor, held together by a vertical precompression structure. This design enables ITER to access a wide operating window of plasma parameters , up to 17 MA and covering inductive and non-inductive operation. Each coil is based on a stack of multiple pancake winding units to minimise joints. A glass-polyimide electrical insulation, impregnated with epoxy resin, is giving a high voltage operating capability, tested up to 29 kV. The CS performance is fatigue driven mainly by the stress levels in the conductor jacket and in the precompression structure needed to keep the modules in contact during the repulsive forces which can arise in operation. A rigid connection to the TF coils provided at one end and a centering support at the other end allow to resist net vertical forces as well as unbalanced radial forces while avoiding torsion transmission from the TF Coils to the CS assembly.},
+author = {Libeyre, P and Mitchell, N and Bessette, D and Gribov, Y and Jong, C and Lyraud, C},
+doi = {10.1016/j.fusengdes.2009.01.090},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Libeyre et al. - 2009 - Detailed design of the ITER central solenoid.pdf:pdf},
+journal = {Fusion Engineering and Design},
+keywords = {Central solenoid,Coils,Electrical insulation,Hexapancake,High voltage,ITER,Precompression structure,Tokamak},
+pages = {1188--1191},
+title = {{Detailed design of the ITER central solenoid}},
+url = {https://ac.els-cdn.com/S0920379609001215/1-s2.0-S0920379609001215-main.pdf?{\_}tid=b8b76e0b-6bc2-4857-aa4a-a313bcf8713e{\&}acdnat=1544305129{\_}a0edde804bca8fd02619b090c25765b1},
+volume = {84},
+year = {2009}
+}
+
+@misc{nyt,
+ title = {A Dream of Clean Energy at a Very High Price},
+ howpublished = {\url{https://www.nytimes.com/2017/03/27/science/fusion-power-plant-iter-france.html}},
+ note = {Accessed: 2018-12-6},
+ journal = {The New York Times},
+ author = {Fountain, H.},
+ month = march,
+ year = {2017}
+}
+
+@misc{bloomberg,
+ title = {World’s Biggest Science Experiment Seeks More Time and Money},
+ howpublished = {\url{https://www.bloomberg.com/news/articles/2016-06-15/world-s-biggest-science-experiment-seeks-more-time-and-money}},
+ note = {Accessed: 2018-12-6},
+ journal = {Bloomberg Business},
+ author = {Tirone, J.},
+ month = june,
+ year = {2016}
+}
+
+
+@article{kstar,
+  title={The KSTAR project: An advanced steady state superconducting tokamak experiment},
+  author={Lee, GS and Kim, J and Hwang, SM and Chang, Choong-Seock and Chang, Hong-Young and Cho, MH and Choi, BH and Kim, K and Cho, KW and Cho, S and others},
+  journal={Nuclear Fusion},
+  volume={40},
+  number={3Y},
+  pages={575},
+  year={2000},
+  publisher={IOP Publishing}
+}
+
 @article{stellar,
   title={Physics of the density limit in the W7-AS stellarator},
   author={Giannone, Louis and Baldzuhn, J and Burhenn, R and Grigull, P and Stroth, U and Wagner, F and Brakel, R and Fuchs, C and Hartfuss, HJ and McCormick, K and others},
