--- a/intro.tex
+++ b/intro.tex
@@ -17,26 +17,39 @@
 %
 %\let\cleardoublepage\relax \tableofcontents \newpage
 
-\chapter{Introducing Fusion Reactors}
-
-The central goal of fusion energy research is to build a profitable nuclear reactor. It has long been joked though that fusion power will always be 20-50 years away. This paper lays a framework for exploring reactor space for functional, efficient designs -- based on world experiments during the last half-century. Due to the speed and simplicity of the model, hundreds of reactors can be explored in minutes (outpacing the domestic program slightly).
-
-With this proposed model, interesting reactors can be pinpointed long before engineers hit the blueprints. This should help shorten the time until a profitable reactor, as well as illuminate ways to improve modern plasma theory. Further, it verifies the reasoning of MIT's PSFC to invest in high field, high-temperature superconducting (HTS) tape -- as this technology would lead to much smaller devices.
-
-\section{Treating Fusion as a Science}
-
-When people talk about fusion, they usually talk about plasma physics, and when people talk about plasma physics, they often talk about things like: the sun, lightning, and the aurora borealis. Of these three, the sun is the only nuclear reactor. However, the sun can stay on all day because the massive gravity of its fuel source helps keep it self-contained in space. On Earth, this is not possible -- the plasma fuel\footnote{Plasmas are the fourth state of matter after: solids, liquids, and gases. Fundamentally they are gaseous fluids that respond to electric and magnetic fields.} needs to be contained by other means (i.e.\ with magnets).
+\chapter{Introducing Fusion Reactor Design}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.75\textwidth]{images/fusion_reactor}
+\includegraphics[width=0.75\textwidth]{images/fusion_reactor}
 	\caption{Cut-Away of Tokamak Reactor} ~\\
-	\small The three main components of a magnetic fusion reactor are: the tokamak structure, the plasma fuel, and the spring-like solenoid at the center.
+	\small The three main components of a magnetic fusion reactor are: the tokamak structure, the plasma fuel, and the spring-like solenoid at the center. Here, the directions of the magnetic field ($B_0$) and plasma current ($I_P$) variables are shown to be in the toroidal direction.
+	\label{fig:fusion_reactor}
 \end{figure}
 
-A tokamak is one of the leading candidates for a profitable fusion reactor. It shares the shape of a doughnut, using magnets to keep a hula hoop of plasma swirling inside it. The difficulty of keeping this plasma swirling though, is that it does not enjoy being spun too fast or squeezed too hard. Conversely, the tokamak housing the plasma does not like taking too much of a beating or being scaled to T-Rex sized proportions. This sets the stage for tokamak reactor design -- building on the various plasma physics and nuclear engineering constraints of the day. 
+\added{The central goal of fusion energy research is to build an economically competitive nuclear reactor. It has long been joked, though, that fusion power will always be twenty years away. This is mainly due to the nonlinearities inherent to a reactor system and the high upfront cost of building a new machine. The model developed for this paper uses standard theory and empirical fits to find cost trends from this nonlinear system. An important conclusion is that building an economic reactor using existing technology would be impossible. One solution may be improving magnet technology -- as MIT is exploring with high-temperature superconducting (HTS) tape.}
 
-One of the most contentious points of building a tokamak, however, is whether it will be run as: pulsed (the European approach \cite{eupulsed}) or steady-state (the United States effort \cite{ussteady}). Here, pulsed operation refers to how a reactor is turned on and off periodically -- around ten times a day. Whereas, steady state machines are meant to be left on nearly the entirety of their 50-year campaigns. These behaviors are shown in \cref{fig:pulses}.
+\added{As can be seen by comparing the European and American/Asian fusion reactor design efforts, though, one of the most important decisions is whether to run the reactor as pulsed (EU\cite{eupulsed}) or steady-state (US\cite{ussteady} and Korea\cite{kstar}). The distinction between the two mainly manifests itself in the choice of auxiliary current drive:  inductive  for pulsed and lower hybrid for steady-state.\cite{jeff} With the model built for this thesis, it is possible to perform a direct comparison of these two modes of operations. }
+
+\added{Due to the speed and simplicity of the model, hundreds of reactors can be simulated in minutes. Further, the model has been benchmarked against other ones from the literature\cite{ussteady,arc,process,inputfile}, allowing it to answer several critical questions regarding the comparison of the two modes of operation. A major finding of this is that HTS tape should appear in different places for the two modes of operation: within the central solenoid for pulsed machines and inside the TF coil magnets for steady-state ones. }
+
+\deleted{The central goal of fusion energy research is to build a profitable nuclear reactor. It has long been joked though that fusion power will always be 20-50 years away. This paper lays a framework for exploring reactor space for functional, efficient designs -- based on world experiments during the last half-century. Due to the speed and simplicity of the model, hundreds of reactors can be explored in minutes (outpacing the domestic program slightly).}
+
+\deleted{With this proposed model, interesting reactors can be pinpointed long before engineers hit the blueprints. This should help shorten the time until a profitable reactor, as well as illuminate ways to improve modern plasma theory. Further, it verifies the reasoning of MIT's PSFC to invest in high field, high-temperature superconducting (HTS) tape -- as this technology would lead to much smaller devices.}
+
+\section{Distinguishing Pulsed from Steady-State}
+
+\added{The leading candidate for the first economic, power-producing fusion reactor is a tokamak. As shown in \cref{fig:fusion_reactor}, tokamaks are doughnut-shaped metal structures that use magnets to confine their fusion-grade plasmas. The challenge in building such a device comes from the various physics and engineering constraints it must satisfy -- i.e. not surpassing acceptable levels of neutron damage, plasma pressure, etc.} 
+
+\added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involves with the two modes of operation are then: cyclical stresses for pulsed and expensive current drive for steady state.\cite{jeff}}
+
+\deleted{When people talk about fusion, they usually talk about plasma physics, and when people talk about plasma physics, they often talk about things like: the sun, lightning, and the aurora borealis. Of these three, the sun is the only nuclear reactor. However, the sun can stay on all day because the massive gravity of its fuel source helps keep it self-contained in space. On Earth, this is not possible -- the plasma fuel needs to be contained by other means (i.e.\ with magnets).}
+
+%\footnote{Plasmas are the fourth state of matter after: solids, liquids, and gases. Fundamentally they are gaseous fluids that respond to electric and magnetic fields.}
+
+\deleted{A tokamak is one of the leading candidates for a profitable fusion reactor. It shares the shape of a doughnut, using magnets to keep a hula hoop of plasma swirling inside it. The difficulty of keeping this plasma swirling though, is that it does not enjoy being spun too fast or squeezed too hard. Conversely, the tokamak housing the plasma does not like taking too much of a beating or being scaled to T-Rex sized proportions. This sets the stage for tokamak reactor design -- building on the various plasma physics and nuclear engineering constraints of the day. }
+
+\deleted{One of the most contentious points of building a tokamak, however, is whether it will be run as: pulsed (the European approach \cite{eupulsed}) or steady-state (the United States effort \cite{ussteady}). Here, pulsed operation refers to how a reactor is turned on and off periodically -- around ten times a day. Whereas, steady state machines are meant to be left on nearly the entirety of their 50-year campaigns. These behaviors are shown in Fig.\ \ref{fig:pulses}.}
 
 \begin{figure}
 	\centering
@@ -45,72 +58,76 @@ One of the most contentious points of building a tokamak, however, is whether it
 	\end{adjustbox}
 %	\includegraphics[width=0.85\textwidth]{images/test_image}
 	\caption{Comparison of Pulsed and Steady-State Current} ~\\
-	\small Inside a pulsed reactor, current is ramped up and down several times a day -- with breaks in-between. Steady state reactors are meant to stay on for weeks, months, or years.
+	\small Inside a pulsed reactor, current is ramped up and down several times a day -- with downtime in-between. Steady state reactors are meant to remain on for weeks or months.
 	\label{fig:pulses}
 \end{figure}
 
-These two modes of operation, \emph{pulsed} and \emph{steady-state}, greatly influence the design through the current balance equation (derived later). What this means practically is tokamaks need current to spin their plasma hoops at some required speed and this current has to come from somewhere. Luckily, the plasma naturally enjoys spinning and provides some assistance through the bootstrap current. The remaining current must then be produced by external means.
+\replaced{The main way these}{These} two modes of operation, \emph{pulsed} and \emph{steady-state}, \deleted{greatly} influence \replaced{reactor design, though, is}{the design} through the current balance equation (derived later). What this means practically is \replaced{a tokamak plasma requires some current to stay in equilibrium}{tokamaks need current to spin their plasma hoops at some required speed} and this current has to \replaced{be partially generated by auxiliary systems: inductively for pulsed and non-inductively for steady-state.}{come from somewhere. Luckily, the plasma naturally enjoys spinning and provides some assistance through the bootstrap current. The remaining current must then be produced by external means.} \added{To fairly compare the two modes of operation thus requires a generalized handling of current balance that can incorporate both auxiliary systems. }
 
-The source of external current drive is what distinguishes pulsed from steady-state devices. Steady-state devices provide the required current assistance either through lasers or particle beams -- this paper's model focusing on a type of laser assistance called lower-hybrid current drive (LHCD). \cite{jeff} Pulsed machines, on the other hand, rely on inductive sources -- which by definition require cycles of charging and discharging several times a day.\footnote{ These inductive sources are akin to a battery on a laptop that must be recharged every so often. }
+\deleted{The source of external current drive is what distinguishes pulsed from steady-state devices. Steady-state devices provide the required current assistance either through lasers or particle beams -- this paper's model focusing on a type of laser assistance called lower-hybrid current drive (LHCD). \cite{jeff} Pulsed machines, on the other hand, rely on inductive sources -- which by definition require cycles of charging and discharging several times a day.}
 
-The goal of this document is to show that pulsed and steady-state operation are actually two sides of the same coin. This yields the simple conclusion that a single comprehensive model can run both modes at the flip of a switch. It even opens the opportunity of a hybrid reactor that exists somewhere in between the two.
+%\footnote{ These inductive sources are akin to a battery on a laptop that must be recharged every so often. }
 
-\section{Treating Fusion as a Business}
+\deleted{The goal of this document is to show that pulsed and steady-state operation are actually two sides of the same coin. This yields the simple conclusion that a single comprehensive model can run both modes at the flip of a switch. It even opens the opportunity of a hybrid reactor that exists somewhere in between the two.}
 
-Plasmas may be interesting, but that is not why countries build billion dollar research experiments. The ultimate goal of fusion research is to develop an energy resource that competes with coal and other base-load power sources (e.g.\ from hydroelectric and nuclear fission power plants). The problem is plasmas are chaotic and hard to contain, while tokamaks are expensive and slow to build. This perfect match has long put the field's projected timeline to that of \emph{fusion never}. \cite{fusionfunding}
-
-\begin{figure}[h]
-	\centering
-	\begin{adjustbox}{width=0.75\textwidth}
-		\input{images/fusion_never}
-	\end{adjustbox}
-%	\includegraphics[width=0.75\textwidth]{images/test_image}
-	\caption{Fusion Never Funding Timeline} ~\\
-	\small Comparison of Projected Timelines of Fusion from 1976 with Actual DOE Budgets. \cite{doe87, doe19} \\ The dotted line is popularly referred to in the community as ``Fusion Never.'' \cite{fusionnever}
-\end{figure}
-
-The major problem with containing a plasma in a reactor is that a plasma does not want to be contained. Since the early days of fusion research, plasmas have often found escape mechanisms. When presented with a magnetic bottle, they found their way out the top. In a tokamak, they attack the outer edges like an overinflated tire-tube. Fusion energy has seemed to remain a Tantalizing effort -- within arms reach, but staunchly guarded by a shroud of instabilities.
-
-The truth is plasmas are extremely chaotic: they show nonlinear behavior in almost everything they do. As of now, no theory or supercomputer-backed code can predict even something so fundamental to design as the movement of energy and particles within a tokamak. As such, the field has adopted several rules of thumb and empirical scalings -- based on the last half century of experiments -- which help one navigate around a plasma's finicky behavior.
-
-The two most widely used rules of thumb within the fusion design community are: the Greenwald density limit and the ELMy H-Mode confinement time scaling law. As such, the model in this document heavily utilizes the two to make a quick running code. These two relations are also why this model -- which happens to be zero-dimensional -- can reproduce with high fidelity the answers from three-dimensional codes, which can take days, weeks, or even months to run!
-
-\begin{figure}
-	\centering
-	\begin{adjustbox}{width=0.75\textwidth}
-		\input{images/h_mode}
-	\end{adjustbox}
-%	\includegraphics[width=0.75\textwidth]{images/test_image}
-	\caption{H-Mode Confinement Time Scaling} ~\\
-	\small This plot shows how well the ELMy H-Mode Scaling Law does for fitting $\tau_E$ to the ITER98 database of global tokamaks. For most values, the fit is at least 80\% accurate.
-	\label{fig:elmy}
-\end{figure}
-
-The use of the ELMy H-Mode scaling law also brings up another subtlety in the field. To measure the movement of energy within a plasma, scaling relations are needed that correlate to specific modes of plasma behavior -- i.e.\ ones that can robustly be found on a device by technicians. Currently, people rank H-Mode scalings over L-Mode ones (because H stands for high confinement and L stands for low). However, people often seek out other modes that can reliably be found on other machines. These go by names like: I-Mode (i.e.\ intermediate confinement), Enhanced H-Mode, and Reversed Shear modes. \cite{imode,enhanced,shear}
-
-Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to more attractive reactors (than those made under H-Mode scalings). The problem, however, is often not finding a better performing mode on a single machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined.\footnote{ In H-Mode and L-Mode's favor, they have been found on every machine that should see them. }
+%\section{Treating Fusion as a Business}
+%
+%Plasmas may be interesting, but that is not why countries build billion dollar research experiments. The ultimate goal of fusion research is to develop an energy resource that competes with coal and other base-load power sources (e.g.\ from hydroelectric and nuclear fission power plants). The problem is plasmas are chaotic and hard to contain, while tokamaks are expensive and slow to build. This perfect match has long put the field's projected timeline to that of \emph{fusion never}. \cite{fusionfunding}
+%
+%\begin{figure}[h]
+%	\centering
+%	\begin{adjustbox}{width=0.75\textwidth}
+%		\input{images/fusion_never}
+%	\end{adjustbox}
+%%	\includegraphics[width=0.75\textwidth]{images/test_image}
+%	\caption{Fusion Never Funding Timeline} ~\\
+%	\small Comparison of Projected Timelines of Fusion from 1976 with Actual DOE Budgets. \cite{doe87, doe19} \\ The dotted line is popularly referred to in the community as ``Fusion Never.'' \cite{fusionnever}
+%\end{figure}
+%
+%The major problem with containing a plasma in a reactor is that a plasma does not want to be contained. Since the early days of fusion research, plasmas have often found escape mechanisms. When presented with a magnetic bottle, they found their way out the top. In a tokamak, they attack the outer edges like an overinflated tire-tube. Fusion energy has seemed to remain a Tantalizing effort -- within arms reach, but staunchly guarded by a shroud of instabilities.
+%
+%The truth is plasmas are extremely chaotic: they show nonlinear behavior in almost everything they do. As of now, no theory or supercomputer-backed code can predict even something so fundamental to design as the movement of energy and particles within a tokamak. As such, the field has adopted several rules of thumb and empirical scalings -- based on the last half century of experiments -- which help one navigate around a plasma's finicky behavior.
+%
+%The two most widely used rules of thumb within the fusion design community are: the Greenwald density limit and the ELMy H-Mode confinement time scaling law. As such, the model in this document heavily utilizes the two to make a quick running code. These two relations are also why this model -- which happens to be zero-dimensional -- can reproduce with high fidelity the answers from three-dimensional codes, which can take days, weeks, or even months to run!
+%
+%\begin{figure}
+%	\centering
+%	\begin{adjustbox}{width=0.75\textwidth}
+%		\input{images/h_mode}
+%	\end{adjustbox}
+%%	\includegraphics[width=0.75\textwidth]{images/test_image}
+%	\caption{H-Mode Confinement Time Scaling} ~\\
+%	\small This plot shows how well the ELMy H-Mode Scaling Law does for fitting $\tau_E$ to the ITER98 database of global tokamaks. For most values, the fit is at least 80\% accurate.
+%	\label{fig:elmy}
+%\end{figure}
+%
+%The use of the ELMy H-Mode scaling law also brings up another subtlety in the field. To measure the movement of energy within a plasma, scaling relations are needed that correlate to specific modes of plasma behavior -- i.e.\ ones that can robustly be found on a device by technicians. Currently, people rank H-Mode scalings over L-Mode ones (because H stands for high confinement and L stands for low). However, people often seek out other modes that can reliably be found on other machines. These go by names like: I-Mode (i.e.\ intermediate confinement), Enhanced H-Mode, and Reversed Shear modes. \cite{imode,enhanced,shear}
+%
+%Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to more attractive reactors (than those made under H-Mode scalings). The problem, however, is often not finding a better performing mode on a single machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined.\footnote{ In H-Mode and L-Mode's favor, they have been found on every machine that should see them. }
 
 \section{Pricing a Fusion Reactor}
 
-To compare tokamaks used as fusion reactors the obvious metrics are costs. ITER -- the second most expensive experiment today (only behind the LHC) -- has a history rich in countries backing out for high price tags and rejoining only when they finally get lowered. \cite{jeff} The problem is \$20B is a lot of money and 20 years is a long time. Moreover, approximating true costs becomes even trickier when designers need to project (or neglect)  economies-of-scale for expensive components, such as the magnets and irradiated materials.
+To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{reactors} the obvious metrics are costs. ITER -- the \deleted{second} most expensive experiment \replaced{in the world\cite{nyt,bloomberg}}{today (only behind the LHC)} -- has a history \replaced{full of}{rich in} countries backing out for high \replaced{construction costs}{price tags} and rejoining only \replaced{after}{when} they finally get lowered.\cite{jeff} The problem is \$20B is a lot of money and 20 years is a long time. Moreover, approximating true costs \replaced{is difficult due to the}{becomes even trickier when designers} need to project (or neglect)  economies-of-scale for expensive components, such as the \added{superconducting} magnets and irradiated materials.
 
-As such, this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, for both: modeling reasons as well as conveying the two metrics to physicists. To begin, the relevant approximation for capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
+\replaced{Therefore,}{As such,} this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, \replaced{both in:}{for both:} \replaced{formulating the relations and}{modeling reasons as well as} conveying the two metrics to physicists. \replaced{The approximation for the}{To begin, the relevant approximation for} capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
 \begin{equation}
 	W_M \propto R^3 B^2
 	\label{eq:w_m}
 \end{equation}
 \myequations{Magnetic Energy -- $W_M$}
 
-In this magnetic energy proportion relation, the tokamak's major radius -- R -- is involved in a volumetric term ($R^3$) and B is the strength (in Teslas) of the hooped shape magnetic field that lays nested within the plasma's shell (near its core). This quantity simply states that the two surefire ways to make a machine more expensive to build are: making it larger and using stronger magnets.
+In this magnetic energy proportion relation, the tokamak's major radius -- R -- is involved in a volumetric term ($R^3$) and B is the strength (in Teslas) of the \replaced{toroidal magnetic field.}{hooped shape magnetic field that lays nested within the plasma's shell (near its core).} This quantity simply states that the two surefire ways to make a machine more expensive \replaced{are to build it bigger and to use stronger magnets.}{to build are: making it larger and using stronger magnets.} \added{As these terms also improve confinement, this cost introduces a trade-off between size and magnet technology. This is why the proposed ARC reactor -- designed with HTS tape -- could be half the size of ITER, which uses conventional LTS technology.}
 
-The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e.\ the magnetic energy) by the main source of power output. This quantity measures how profitable a reactor will be once it is built. In a tokamak, the main power output is assumed to be fusion power, which relies on light elements (i.e.\ two Hydrogens) fusing into a heavier one (i.e.\ one Helium) -- hopefully releasing enough energy to offset the expense of causing it to happen in the first place. Although fusion power will not be defined till later, it does highlight the fact that this measure of cost-per-watt actually has units of time!\footnote{As energy per unit watt has units of time (i.e seconds).}
+The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e.\ the magnetic energy) by the main source of power output. \added{For a tokamak, this source of power is fusion -- discussed in more detail in \cref{chapter:power}.} \added{The cost-per-watt thus measures how economically competitive a reactor will be once it is build. This is how to compare the rate of return for different base-load power sources (e.g. fission, coal, and solar).} \deleted{This quantity measures how profitable a reactor will be once it is built. In a tokamak, the main power output is assumed to be fusion power, which relies on light elements (i.e.\ two Hydrogens) fusing into a heavier one (i.e.\ one Helium) -- hopefully releasing enough energy to offset the expense of causing it to happen in the first place. Although fusion power will not be defined till later, it does highlight the fact that this measure of cost-per-watt actually has units of time!} 
+\begin{equation}
+	\tilde C_W = \frac{W_M}{P_F}
+\end{equation}
+%\footnote{As energy per unit watt has units of time (i.e seconds).
+\deleted{The final piece of the costing puzzle is a duty factor that levelizes the comparison of pulsed and steady-state tokamaks. As pulsed machines may be off 20\% of the time, their fusion power output should be reduced by that percentage. This is accounted for in the duty factor, which is simply the ratio of the flattop -- the time when pulsed machines are approximately held at steady-state -- to the entire length of the pulse.}
+\deleted{In pulsed machines, the entire pulse includes charging the inductive sources as well as flushing out the tokamak between runs. These non-flattop portions of time can last around thirty minutes (where the reactor makes no money). As steady-state machines lack these non-flattop portions, their duty factors are rightfully one. Analysis in Fig.\ \ref{section:pulse} and discussion with several researchers, however, show that the same will probably hold true for a pulsed reactor, too.}
+\deleted{Summarizing, the cost-per-watt coupled with the duty factor provides an ad hoc pricing metric, $C_W$, given by:}
 
-The final piece of the costing puzzle is a duty factor that levelizes the comparison of pulsed and steady-state tokamaks. As pulsed machines may be off 20\% of the time, their fusion power output should be reduced by that percentage. This is accounted for in the duty factor, which is simply the ratio of the flattop -- the time when pulsed machines are approximately held at steady-state -- to the entire length of the pulse. 
-
-In pulsed machines, the entire pulse includes charging the inductive sources as well as flushing out the tokamak between runs. These non-flattop portions of time can last around thirty minutes (where the reactor makes no money). As steady-state machines lack these non-flattop portions, their duty factors are rightfully one. Analysis in \cref{section:pulse} and discussion with several researchers, however, show that the same will probably hold true for a pulsed reactor, too.
-
-Summarizing, the cost-per-watt coupled with the duty factor provides an ad hoc pricing metric, $C_W$, given by:
-
+\added{ A final correction can be made on the cost-per-watt to account for reactor downtime, which is fundamental to pulsed operation. This is handled through the duty factor ($f_{Duty}$) that is defined as the ratio of a reactor's quasi-steady-state flattop duration to the entire pulse length of a tokamak. In the context of the cost-per-watt, it scales down the fusion power:}
 \begin{equation}
 	\tcboxmath{
 	C_W = \frac{W_M}{f_{Duty} \cdot P_F}
@@ -119,21 +136,33 @@ Summarizing, the cost-per-watt coupled with the duty factor provides an ad hoc p
 \end{equation}
 \myequations{Cost per Watt -- $C_W$}
 
-It serves as a cornerstone for comparing the entire landscape of tokamak reactors -- whether they run in pulsed or steady-state operation. Although not a true engineering cost metric (i.e.\ in dollars per watt), it does provide an obvious physics meaning. Coupled with the magnetic energy stand-in for capital cost, these two costs allow researchers to pinpoint profitable and inexpensive tokamaks within reactor space.
+\added{For a steady-state reactor, this duty factor is assumed to be held at one. Pulsed machines, on the other hand, can see around thirty minutes of downtime,\cite{inputfile} which leads to duty factors around 80\%. Analysis in \cref{section:pulse}, however, shows that pulsed reactors may also have duty factors near unity.}
 
-\section{Modeling a Fusion Reactor}
+\deleted{It serves as a cornerstone for comparing the entire landscape of tokamak reactors -- whether they run in pulsed or steady-state operation. Although not a true engineering cost metric (i.e.\ in dollars per watt), it does provide an obvious physics meaning. Coupled with the magnetic energy stand-in for capital cost, these two costs allow researchers to pinpoint profitable and inexpensive tokamaks within reactor space.}
 
-Before reactors can be costed, though, they have to be modeled. Therefore the first half of this thesis is devoted to the theory behind tokamak design. A priority is placed more on a physicist's intuition than an engineer's costing rigor. This is justified by the nonlinearities inherent to the fusion systems and rationalized by this paper's results matching more sophisticated frameworks with high fidelity.
+\added{Combined, these two cost metrics allow designers to pinpoint economically competitive tokamaks within reactor space. Although not rigorous in an engineering context, these capital cost and cost-per-watt approximations do provide true physics meaning while comparing different machines -- whether they run as pulsed or steady-state.}
 
-What makes this paper's model different from others in the field is the generalized handling of both modes of tokamak operation: pulsed and steady-state. This was necessitated by a desire to compare the two modes on a level playing field. What this shows is that both pulsed and steady-state tokamaks could make for profitable fusion reactors -- assuming some technological advancements.
+\section{Modeling Fusion Systems}
 
-One technological advancement that could lead to major wins is improving magnet components. This is why MIT has championed high-field designs for the better part of the last century. In their latest effort, the PSFC team has explored new high-temperature superconducting (HTS) tape capable of doubling the maximum achievable field strength. What this paper shows is that this logic is indeed correct and that HTS tape is all that is needed to build optimum reactors.
+Before reactors can be \replaced{priced}{costed}, though, they have to be modeled. Therefore the first half of this thesis is devoted to the theory behind tokamak design. \replaced{Emphasis}{A priority} is placed more on a physicist's intuition than an engineer's costing rigor. This is justified by the nonlinearities inherent to \deleted{the} fusion systems and rationalized by this paper's results matching more sophisticated \replaced{models}{frameworks} with high fidelity.
 
-More concretely, this paper shows that new HTS tape technology is capable of lowering both pulsed and steady-state tokamak costs. Further, the benefits of doubling the magnet strength bring the situation to a realm of significantly diminished rates of return. HTS is thus the end goal for the conventional D-T fusion paradigm. 
+\added{Stepping back, a fusion systems model is an approach to designing reactors based on satysfying various physics and engineering constraints. Zero-dimensional (0-D) systems models are then a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of this is that hundreds of reactors can be simulated in minutes.}
 
-Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e.\ the TF coils). Whereas pulsed devices would benefit from employing HTS in the central solenoid -- that produces most of a reactor's inductive current. A corollary of this is \replaced{the more conventional low-temperature superconducting (LTS) magnets (i.e.\ less expensive ones)}{conventional copper magnets (i.e.\ inexpensive ones)} can be used for pulsed TF coils, as their improved confinement saturates at much lower field strengths.
+\added{Within the context of reactor design, these 0-D systems models serve an important role due to their speed and simplicity. Although not truly self-consistent,}\footnote{For speed concerns, 0-D fusion systems models often ignore self consistency in quantities like pressure profiles and use empirical fits to estimate values such as the confinement time.} \added{these models are capable of exploring large areas of reactor space. This is especially important in the early stages of tokamak planning when researchers are selecting a design point. These models also have use in finding general costing trends -- as shown in this document.}
 
-Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple segues will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fussy.jl -- is the topic of an appendix chapter and is freely available at:
+What makes this paper's \added{systems} model different from \replaced{other ones, though,}{others in the field} is \replaced{its}{the} generalized handling of both modes of tokamak operation: pulsed and steady-state. This was necessitated by a desire to \added{fairly} compare the \replaced{two.}{two modes on a level playing field.} \replaced{The most fundamental result of this analysis is that both modes are actually capable of leading to economically competitive reactors}{What this shows is that both pulsed and steady-state tokamaks could make for profitable fusion reactors} -- assuming some technological advancements.
+
+\section{Discussing HTS Magnet Technology}
+
+\added{As mentioned, no economically competitive fusion reactor can be built using existing technology -- regardless of whether it runs as pulsed or steady-state. This is why MIT has been exploring HTS magnet technology for their Arc reactor in an effort to nearly double the maximum achievable field strength. What this paper shows is that this logic is indeed correct and HTS may be the final magnet advancement needed for the conventional fusion paradigm (i.e. D-T fuel, H-Mode, etc.)}
+
+\deleted{One technological advancement that could lead to major wins is improving magnet components. This is why MIT has championed high-field designs for the better part of the last century. In their latest effort, the PSFC team has explored new high-temperature superconducting (HTS) tape capable of doubling the maximum achievable field strength. What this paper shows is that this logic is indeed correct and that HTS tape is all that is needed to build optimum reactors.}
+
+More concretely, this paper shows that new HTS \deleted{tape} technology is capable of lowering \replaced{reactor costs -- both for pulsed and steady-state operation.}{both pulsed and steady-state tokamak costs.} \replaced{Further, this HTS tape has different uses within the two modes of operation -- as set by cost concerns (see \cref{fig:charybdis_intro,fig:proteus_intro}). This analysis shows that HTS should be employed in the TF coils for steady-state reactors \emph{and} in the central solenoid for pulsed ones. This is because pulsed machines require lower toroidal field strengths, which are achievable with less expensive LTS magnets.}{Further, the benefits of doubling the magnet strength bring the situation to a realm of significantly diminished rates of return. HTS is thus the end goal for the conventional D-T fusion paradigm.}
+
+\deleted{Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e.\ the TF coils). Whereas pulsed devices would benefit from employing HTS in the central solenoid -- that produces most of a reactor's inductive current. A corollary of this is the more conventional low-temperature superconducting (LTS) magnets (i.e.\ less expensive ones) can be used for pulsed TF coils, as their improved confinement levels off at much lower field strengths.}
+
+Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple \replaced{detours}{segues} will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fussy.jl -- is the topic of \cref{chapter:fussy} and is freely available at:
  
 {\centering \href{http://git.io/tokamak}{git.io/tokamak} \par }
 
@@ -163,7 +192,8 @@ Now that the problem has been thoroughly introduced, we will go over the theory 
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\
     \caption{Steady State Magnet Components} ~\\
-    \label{fig:charybdis}
+    \small{\added{Steady-state reactors benefit from increased toroidal field strength until neutron wall loading starts to dominate design (at around 10-15 T for Charybdis). This is well within the range accessible to HTS magnets.}}
+    \label{fig:charybdis_intro}
 \end{figure*}
 
 \begin{figure*}
@@ -188,5 +218,6 @@ Now that the problem has been thoroughly introduced, we will go over the theory 
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\
     \caption{Pulsed Magnet Components} ~\\
-    \label{fig:charybdis}
+    \small{\added{Pulsed reactors are shown to receive strong decreases in reactor cost as the central solenoid field strength is increased, until around 20 T. However, the TF coils do not receive the same cost reduction with field strength -- as shown by the minimum cost appearing at 5 T.}}
+    \label{fig:proteus_intro}
 \end{figure*}
