--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 
 \usepackage[capitalise]{cleveref}
 
-\usepackage[symbol, flushmargin, hang, perpage]{footmisc}
+\usepackage[perpage, symbol, flushmargin, hang]{footmisc}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \usepackage[most]{tcolorbox}
@@ -60,12 +60,12 @@
 
 \pgfplotsset{compat=1.3}
 
-\usepackage[final]{changes}
-%\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
-%\usepackage{changes}
-%\definecolor{blue}{rgb}{0,0,1.}
+%\usepackage[final]{changes}
+\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
+\usepackage{changes}
+\definecolor{blue}{rgb}{0,0,1.}
 
-%\includeonly{conclusion,biblio}
+%\includeonly{biblio,steady,pulsed}
 
 \let\vec\mathbf
 
