--- a/steady.tex
+++ b/steady.tex
@@ -69,7 +69,6 @@ These questions lend themselves to the three important geometric variables -- th
 	a = \epsilon \cdot R_0
 \end{equation}
 \myequations{Minor Radius -- $a$}
-
 This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\epsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.} 
 
 The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related to the shape of the torn halves. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is shown in \cref{chapter:flux}. }
@@ -149,12 +148,10 @@ To begin, density has the simplest profile. This is because it is relatively fla
 	n(\rho) = \overline n \cdot ( 1 + \nu_n ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_n}
 \end{equation}
 \myequations{Density Profile -- $n$}
-
 \added{The reason $\overline n$ is referred to as the volume-averaged density is because using the volume integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):} 
 \begin{equation}
 	\overline n = \frac{ \int n(\vec{\bold{r}}) \, d\vec{\bold{r}}  }{\volume}
 \end{equation}
-
 \added{A final point to make is this parabolic profile allows for a short closed-form relation for the Greenwald density limit -- substantially simplifying this fusion systems model.} 
 
 \subsubsection{The Temperature Profile}
@@ -172,10 +169,9 @@ The plasma current \added{density} is the third profile and cannot safely be rep
 	J(\rho) = \bar{J} \cdot \frac{ \gamma ^ 2 \cdot ( 1 - \rho ^ 2 ) \cdot e^{ \gamma \rho^2 } }{ e^\gamma - 1 - \gamma}
 \end{equation}
 \myequations{Current Profile -- $J$}
-
 The intermediate $\gamma$ quantity can then be numerically solved for from the plasma internal inductance using the following relations -- with $b_p$ representing the normalized poloidal magnetic field. \added{These are derived in \cref{chapter:bootstrap}.}
 \begin{equation}
-	l_i = \frac{4 \kappa}{1+\kappa^2}	 \int_0^1 b_p^2 \ \frac{d\rho}{\rho}
+	l_i = \frac{4 \kappa}{1+\kappa^2}	 \int_0^1 b_p^2 \, \rho \, d\rho
 \end{equation}
 \myequations{Internal Inductance -- $l_i$}
 \begin{equation}
@@ -183,7 +179,6 @@ The intermediate $\gamma$ quantity can then be numerically solved for from the p
 	b_p(\rho) = \frac{ -e^{\gamma\rho^2} ( \gamma\rho^2 - 1 - \gamma ) - 1 - \gamma }{\rho \,( e^\gamma - 1 - \gamma ) }
 \end{equation}
 \myequations{Normalized Poloidal Magnetic Field -- $b_p$}
-
 Combined, these three geometric parameters and profiles lay the foundation for this zero-dimensional fusion systems model.
 
 \section{Solving the Steady Current}
@@ -196,7 +191,6 @@ As suggested, one of the most important equations in a fusion reactor is current
 	}
 \end{equation}
 \myequations{Current Balance -- $I$}
-
 The goal is then to write equations for bootstrap current and driven current. This will make heavy use of the Greenwald density limit. \replaced{The steady current will then be}{Without spoiling too much, the steady current is} shown to be only a function of temperature! In other words, this current is independent of a tokamak's geometry and magnet strength. As will be pointed out then, though, a subtlety arises that will bring the two back into the picture -- self-consistency in the current drive efficiency ($\eta_{CD}$).
 
 \subsection{Enforcing the Greenwald Density Limit}
@@ -260,13 +254,11 @@ As no theoretical backing exists, the Greenwald density limit can simply be writ
 \begin{equation}
 	\hat n = N_G \cdot \left( \frac{ I_P }{ \pi a^2} \right)
 \end{equation}
-
 Here, $\hat n$ has units of $10^{20} \ \frac{\textnormal{particles}}{\textnormal{m}^3}$, $N_G$ is the Greenwald density fraction, \added{and} $I_P$ is again the plasma current (measured in mega-amps)\added{.} \deleted{ and $\pi$ has its usual meaning(3.141592653...).} The final variable is then the minor radius -- a -- which was previously defined through:
 \begin{equation}
 	\tag{\ref{eq:a}}
 	a = \epsilon \cdot R_0
 \end{equation}
-
 The next step is transforming the \emph{line-averaged} density ($\hat n$) into the \emph{volume-averaged} version ($\overline n$) used in this model. Harnessing the simplicity of the density's parabolic profile allows this relation to be written in a closed form as:
  \begin{equation}
  	\hat n = \frac{\sqrt{\pi}}{2} \cdot \left( \frac{\Gamma \left( \nu_n + 2 \right)}{\Gamma \left( \nu_n + \frac{3}{2} \right)} \right) \cdot \overline n 
@@ -285,7 +277,6 @@ The next step is transforming the \emph{line-averaged} density ($\hat n$) into t
  \begin{equation}
  	K_n = \frac{2 N_G}{\epsilon^2 \, \pi^{3/2} } \cdot \left( \frac{\Gamma \left( \nu_n + \frac{3}{2} \right)}{\Gamma \left( \nu_n + 2 \right)} \right)
 \end{equation}
- 
 The format of the previous equation pair will be used throughout the remainder of the paper. The top equation relates \replaced{dynamic}{floating} variables (i.e.\ $\overline n$, $I_P$, and $R_0$), while the \replaced{static}{fixed}-value coefficient ($K_n$) lumps together \replaced{static}{fixed} quantities, such as: $N_G$, $\epsilon$, 2, $\pi$, and $\nu_n$.
 
 \subsection{Declaring the Bootstrap Current}
@@ -316,12 +307,11 @@ The first term to define in current balance, \cref{eq:ibal}, is the bootstrap cu
 \begin{equation}
 \begin{split}
 	J_{BS} & = f\left( n , T , \frac{dn}{d\rho} , \frac{dT}{d\rho}  \right) \\
-		& \equiv 4.88 \cdot \left( \frac{r}{R_0} \right) \cdot \left( \frac{ n T }{ B_\theta } \right) \cdot \left( \frac{1}{n} \frac{dn}{dr} + 0.055 \, \frac{1}{T} \frac{dT}{dr} \right) 
+		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \epsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right) 
 \end{split}
 \end{equation}
- 
  \added{
- The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit.
+ The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit. The value of $\sfrac{d\psi}{d\rho}$ is given in \cref{chapter:bootstrap}.
  }
  
 \deleted{For a more formal look into this $J_{BS}$ function, check the appendix section on pedestal temperatures. The point to make now is that it depends on the the profiles' derivatives, leading to one major discrepancy in the model.}
@@ -342,7 +332,7 @@ As shown later in the results, bootstrap fractions are often under-predicted by 
 
 \deleted{In standardized units, this proportionality can be written as a concrete relation of the form:}
 
-\added{Finally, summarizing the results of \cref{chapter:bootstrap}, the bootstrap current is found to be only a function of temperature! In standardized units, it can be written as:}
+\added{Finally, summarizing the results of \cref{chapter:bootstrap}, the bootstrap current is found to be only a function of temperature and static variables! In standardized units, it can be written as:}
 \begin{equation}
 	\label{eq:ibs}
 	\tcboxmath{
@@ -356,7 +346,6 @@ As shown later in the results, bootstrap fractions are often under-predicted by 
 \begin{equation}
   H_{BS} = ( 1 + \nu_n ) ( 1 + \nu_T ) ( \nu_n + 0.054 \nu_T ) \int_0^1 \frac{ \rho^{\,5/2} \, ( \, 1 - \rho^{\,2} \, )^{\, \nu_n + \nu_T - 1} }{b_p} \, d\rho
 \end{equation}
-
 Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{fixed}-value coefficients (e.g.\ $K_{BS}$ and $K_n$) when they contain an integral. And $b_p$ represents the poloidal magnet strength given by Eq. \ref{eq:b_p}.
 
 \subsection{Deriving the Fusion Power}
@@ -408,13 +397,11 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 \begin{equation}
 	E_F = 17.6 \ \textnormal{MeV}
 \end{equation}
- 
 \added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
  \begin{equation}
  	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
  \end{equation}
  \myequations{Dilution Factor -- $f_{D}$}
- 
  The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in the appendix). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
  
  The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume analogue of the previously given surface-area integral is:
@@ -438,12 +425,10 @@ In standardized units, this becomes:
 \begin{equation}
   K_F = 278.3 \cdot f_D^2 \cdot ( \epsilon^2 \kappa g )
 \end{equation}
-
 Where the standardized fusion reactivity is now,
 \begin{equation}
    (\sigma v) = 10^{21} \, (1+\nu_n)^2 \int\limits_0^1 ( 1 - \rho^2 ) ^ { \, 2 \nu_n} \langle \sigma v \rangle \, \rho \, d\rho
 \end{equation}
-
 \deleted{As mentioned before, this fusion power is divvied up 80-20 between the neutron and alpha particle. These relations will be used shortly. For now, they can be described mathematically as:}
 %\begin{equation}
 %	P_\alpha = 0.2 \cdot P_F
@@ -453,7 +438,6 @@ Where the standardized fusion reactivity is now,
 %	P_n = 0.8 \cdot P_F
 %\end{equation}
 %\myequations{Neutron Power -- $P_n$}
-
 At this point, the current drive needed for steady-state can now be defined.
 
 \subsection{Using Current Drive}
@@ -463,12 +447,10 @@ As may have been lost along the way, \replaced{this chapter's}{the current} miss
 		\tag{\ref{eq:ibal}}
 		I_P = I_{BS} + I_{CD}
 \end{equation}
-
 In standardized units, the equation for current drive is often given in the literature as: \cite{itercd}
 \begin{equation}
 	I_{CD} = \eta_{CD} \cdot \left( \frac{P_H}{\overline n R_0} \right)
 \end{equation}
-
 Here, $\eta_{CD}$ is the current drive efficiency with units $ \left(
 \frac{ \textnormal{MA} }{ \textnormal{MW-m}^2 } \right) $ and $P_H$ is the heating power in megawatts driven by LHCD (and absorbed by the plasma).
 
@@ -480,7 +462,6 @@ The remaining step in deriving an equation for driven current ($I_{CD}$) is a fo
 \begin{equation}
 	P_H = \frac{P_F}{Q}
 \end{equation}
-
 Now, utilizing the previously defined Greenwald density and fusion power:
  \begin{equation}
  	\tag{\ref{eq:greenwald}}
@@ -490,7 +471,6 @@ Now, utilizing the previously defined Greenwald density and fusion power:
 	\tag{\ref{eq:pf}}
 	P_F = K_F \cdot \overline{n}^2 \cdot R_0^3  \cdot (\sigma v)
 \end{equation}
-
 The current from LHCD can be written as:
 \begin{equation}
 	\label{eq:icd}
@@ -502,7 +482,6 @@ The current from LHCD can be written as:
 \begin{equation}
 	K_{CD} = \left( K_F K_n \right) \cdot \frac{\eta_{CD}}{Q}
 \end{equation}
-
 As $\eta_{CD}$ and Q appear within a \replaced{static}{fixed} coefficient, it is implied that both remain constant throughout a solve. This subtlety is lifted when handling $\eta_{CD}$ self-consistently, which will be discussed shortly. However, even in that context, it proves beneficial to still think of $\eta_{CD}$ as a sequence of \replaced{static}{fixed} variables -- set by the model rather than the user.
 
 \subsection{Completing the Steady Current}
@@ -512,7 +491,6 @@ As $\eta_{CD}$ and Q appear within a \replaced{static}{fixed} coefficient, it is
 	\tag{\ref{eq:ibal}}
 	I_P = I_{BS} + I_{CD}
 \end{equation}
-
 Two equations were then found for the bootstrap ($I_{BS}$) and driven ($I_{CD}$) current:
 \begin{equation}
 	\tag{\ref{eq:ibs}}
@@ -522,7 +500,6 @@ Two equations were then found for the bootstrap ($I_{BS}$) and driven ($I_{CD}$)
 	\tag{\ref{eq:icd}}
 	I_{CD} = K_{CD} \cdot I_P \cdot ( \sigma v )
 \end{equation}
-
 Combining these three equations and solving for the total plasma current ($I_P$) -- in mega-amps -- yields:
 \begin{equation}
 	\label{eq:steady}
@@ -531,7 +508,6 @@ Combining these three equations and solving for the total plasma current ($I_P$)
 	}
 \end{equation}
 \myequations{Steady Current -- $I_P$}
-
 This is the answer we have been seeking!
 
 As mentioned before, this simple formula appears to only depend on temperature!\footnote{ This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\epsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
@@ -542,14 +518,13 @@ As has become a mantra, though, the subtlety of this behavior lies in the self-c
 
 Although a thorough description of the wave theory behind lower-hybrid current drive (LHCD) is well outside the scope of this text, it does motivate the solving of a tokamak's major radius ($R_0$) and field strength ($B_0$). It also shows how what was once a simple problem has now transformed into a rather complex one -- a common occurrence with plasmas.
 
-The logic behind finding a self-consistent current-drive efficiency is starting at some plausible value (i.e.\ $\eta_{CD} = 0.3$), solving for the steady current -- i.e.\ $I_P = f(\overline T)$ -- and then somehow iteratively creeping towards a value deemed self-consistent. What this means is that in addition to the solver described in the last section, there needs to be a black-box function that solutions are piped through to get better guesses at $\eta_{CD}$. The black-box function we use is a variation of the Ehst-Karney model. \cite{ehstkarney}
+The logic behind finding a self-consistent current-drive efficiency is starting at some plausible value (i.e.\ $\eta_{CD} = 0.3$), solving for the steady current -- i.e.\ $I_P = f(\overline T)$ -- and then somehow iteratively creeping towards a value deemed self-consistent. What this means is that in addition to the solver described in the last section, there needs to be a black-box function that solutions are \replaced{sent}{piped} through to get better guesses at $\eta_{CD}$. The black-box function we use is a variation of the Ehst-Karney model. \cite{ehstkarney}
 
-As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was piped in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
+As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
 \begin{equation}
 	\tilde \eta_{CD} = f( R_0, B_0, \overline n, \overline T, I_P )
 \end{equation}
 \myequations{Current Drive Efficiency -- $\eta_{CD}$}
-
 As such, to recalculate it after every solution of the steady current requires a value for both $B_0$ and $R_0$ -- the targets of this model's primary and \replaced{limiting}{secondary} constraints. These will be the highlight of the next chapter.
 
 %\end{document}
