Finish fusion power appendix chapter

--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,13 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@techreport{nrl,
+  title={NRL plasma formulary},
+  author={Huba, Joseph D},
+  year={2006},
+  institution={NAVAL RESEARCH LAB WASHINGTON DC PLASMA PHYSICS DIV}
+}
+
 @article{iter_cs,
 abstract = {The central solenoid (CS) of the ITER tokamak contributes to the inductive flux to drive the plasma, to the shaping of the field lines in the divertor region and to vertical stability control. It is made of 6 independent coils, using a Nb3Sn cable-in-conduit superconducting conductor, held together by a vertical precompression structure. This design enables ITER to access a wide operating window of plasma parameters , up to 17 MA and covering inductive and non-inductive operation. Each coil is based on a stack of multiple pancake winding units to minimise joints. A glass-polyimide electrical insulation, impregnated with epoxy resin, is giving a high voltage operating capability, tested up to 29 kV. The CS performance is fatigue driven mainly by the stress levels in the conductor jacket and in the precompression structure needed to keep the modules in contact during the repulsive forces which can arise in operation. A rigid connection to the TF coils provided at one end and a centering support at the other end allow to resist net vertical forces as well as unbalanced radial forces while avoiding torsion transmission from the TF Coils to the CS assembly.},
 author = {Libeyre, P and Mitchell, N and Bessette, D and Gribov, Y and Jong, C and Lyraud, C},
