--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \usepackage{changes}
 \definecolor{blue}{rgb}{0,0,1.}
 
-%\includeonly{biblio,steady,pulsed}
+\includeonly{biblio,power,steady}
 
 \let\vec\mathbf
 
