--- a/steady.tex
+++ b/steady.tex
@@ -350,6 +350,8 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 
 \subsection{Deriving the Fusion Power}
 
+\label{subsection:fusion_derive}
+
 \deleted{The next segue on our journey to solving for the steady current is deriving the fusion power ($P_F$), which appears in current drive. This requires a more first-principles approach than those used up until now. As such, a quick background is given to motivate the parameters it adds -- i.e.\ the dilution factor ($f_{D}$) and the Bosch-Hale fusion reactivity ($\sigma v$).}
 
 %\begin{figure}
